--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -1,5 +1,5 @@
 <Window
-    x:Class="Client_App.Views.Forms.Forms1.Form_11"
+    x:Class="Client_App.Views.Forms.Forms1.Form_17"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,9 +14,9 @@
     Title="{Binding WindowTitle}"
     d:DesignHeight="450"
     d:DesignWidth="900"
-    x:DataType="vm:Form_11VM"
+    x:DataType="vm:Form_17VM"
     mc:Ignorable="d"
-	x:Name="1.1"
+	x:Name="1.7"
 	WindowStartupLocation="CenterScreen"
 	MinWidth="800" MinHeight="600">
 
@@ -27,7 +27,7 @@
 	</Window.Resources>
 
 	<Design.DataContext>
-		<vm:Form_11VM/>
+		<vm:Form_17VM/>
 	</Design.DataContext>
 
 	<Grid>
@@ -194,7 +194,7 @@
 					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Право собственности на ИОУ</TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
 					</Border>
 					<Border Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2">
@@ -240,7 +240,7 @@
 					<Border Grid.Column="11" Grid.Row="1">
 						<TextBlock>код ОКПО правообладателя</TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="1">
+					<Border Grid.Column="17" Grid.Row="1">
 						<TextBlock>вид</TextBlock>
 					</Border>
 					<Border Grid.Column="13" Grid.Row="1">
@@ -282,11 +282,11 @@
 											Header="1"
 											IsReadOnly="True"
 											x:CompileBindings="True"
-											x:DataType="forms1:Form11"/>
+											x:DataType="forms1:Form17"/>
 
 						<DataGridTemplateColumn Header="2">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
 									<TextBox Text="{Binding OperationCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -294,7 +294,7 @@
 
 						<DataGridTemplateColumn Header="3">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
 									<CalendarDatePicker SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -302,7 +302,7 @@
 
 						<DataGridTemplateColumn Header="4" Width="80">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
 									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -310,40 +310,40 @@
 
 						<DataGridTemplateColumn Header="5"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Type.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="6">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="7"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="8"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Quantity.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="9">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Activity.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -351,116 +351,91 @@
 						<DataGridTemplateColumn
 											Header="10">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="11"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="12"  Width="110">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Category.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="13">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="14">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="15">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="16">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="17">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="18">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
 									<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="16" Width="110">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="17" Width="100">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="18" Width="100">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="19">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
+									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
 						<DataGridTemplateColumn Header="20">
 							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="21">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="22">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
-									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="23">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form11">
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form17">
 									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
-						
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
