--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -191,17 +191,32 @@
 					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
 						<TextBlock>Сведения из паспорта на изделие из обедненного урана</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="2">
-						<TextBlock>Право собственности на ИОУ</TextBlock>
+					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="11" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2">
+					<Border Grid.Column="14" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Код ОКПО</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="16" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
+					</Border>
+					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
+						<TextBlock>Пункт хранения</TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="22" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="23" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="24" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock>Договор</TextBlock>
 					</Border>
 					<!--Второй уровень заголовков-->
 					<Border Grid.Column="0" Grid.Row="1">
@@ -214,54 +229,69 @@
 						<TextBlock>дата</TextBlock>
 					</Border>
 					<Border Grid.Column="3" Grid.Row="1">
-						<TextBlock>номер паспорта</TextBlock>
+						<TextBlock>номер паспорта (сертификата) ЗРИ, акта определения характеристик ОЗИИ</TextBlock>
 					</Border>
 					<Border Grid.Column="4" Grid.Row="1">
-						<TextBlock>наименование</TextBlock>
-					</Border>
-					<Border Grid.Column="5" Grid.Row="1">
-						<TextBlock>номер</TextBlock>
-					</Border>
-					<Border Grid.Column="6" Grid.Row="1">
-						<TextBlock>масса обедненного урана, кг</TextBlock>
-					</Border>
-					<Border Grid.Column="7" Grid.Row="1">
-						<TextBlock>код ОКПО изготовителя</TextBlock>
-					</Border>
-					<Border Grid.Column="8" Grid.Row="1">
-						<TextBlock>дата выпуска</TextBlock>
-					</Border>
-					<Border Grid.Column="9" Grid.Row="1">
-						<TextBlock>НСС, мес</TextBlock>
-					</Border>
-					<Border Grid.Column="10" Grid.Row="1">
-						<TextBlock>код формы собственности</TextBlock>
-					</Border>
-					<Border Grid.Column="11" Grid.Row="1">
-						<TextBlock>код ОКПО правообладателя</TextBlock>
-					</Border>
-					<Border Grid.Column="12" Grid.Row="1">
-						<TextBlock>вид</TextBlock>
-					</Border>
-					<Border Grid.Column="13" Grid.Row="1">
-						<TextBlock>номер</TextBlock>
-					</Border>
-					<Border Grid.Column="14" Grid.Row="1">
-						<TextBlock>дата</TextBlock>
-					</Border>
-					<Border Grid.Column="15" Grid.Row="1">
-						<TextBlock>поставщика или получателя</TextBlock>
-					</Border>
-					<Border Grid.Column="16" Grid.Row="1">
-						<TextBlock>перевозчика</TextBlock>
-					</Border>
-					<Border Grid.Column="17" Grid.Row="1">
-						<TextBlock>наименование</TextBlock>
-					</Border>
-					<Border Grid.Column="18" Grid.Row="1">
 						<TextBlock>тип</TextBlock>
 					</Border>
+					<Border Grid.Column="5" Grid.Row="1">
+						<TextBlock>радионуклиды</TextBlock>
+					</Border>
+					<Border Grid.Column="6" Grid.Row="1">
+						<TextBlock>номер</TextBlock>
+					</Border>
+					<Border Grid.Column="7" Grid.Row="1">
+						<TextBlock>количество, шт</TextBlock>
+					</Border>
+					<Border Grid.Column="8" Grid.Row="1">
+						<TextBlock>суммарная активность, Бк</TextBlock>
+					</Border>
+					<Border Grid.Column="9" Grid.Row="1">
+						<TextBlock>дата выпуска</TextBlock>
+					</Border>
+					<Border Grid.Column="10" Grid.Row="1">
+						<TextBlock>Статус РАО</TextBlock>
+					</Border>
+					<Border Grid.Column="11" Grid.Row="1">
+						<TextBlock>вид</TextBlock>
+					</Border>
+					<Border Grid.Column="12" Grid.Row="1">
+						<TextBlock>номер</TextBlock>
+					</Border>
+					<Border Grid.Column="13" Grid.Row="1">
+						<TextBlock>дата</TextBlock>
+					</Border>
+					<Border Grid.Column="14" Grid.Row="1">
+						<TextBlock>поставщика или получателя</TextBlock>
+					</Border>
+					<Border Grid.Column="15" Grid.Row="1">
+						<TextBlock>перевозчика</TextBlock>
+					</Border>
+					<Border Grid.Column="16" Grid.Row="1">
+						<TextBlock>наименование</TextBlock>
+					</Border>
+					<Border Grid.Column="17" Grid.Row="1">
+						<TextBlock>тип</TextBlock>
+					</Border>
+					<Border Grid.Column="18" Grid.Row="1">
+						<TextBlock>заводской номер</TextBlock>
+					</Border>
 					<Border Grid.Column="19" Grid.Row="1">
+						<TextBlock>наименование</TextBlock>
+					</Border>
+					<Border Grid.Column="20" Grid.Row="1">
+						<TextBlock>код</TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="1">
+						<TextBlock>Код переработки/сортировки РАО</TextBlock>
+					</Border>
+					<Border Grid.Column="22" Grid.Row="1">
+						<TextBlock>Субсидия, %</TextBlock>
+					</Border>
+					<Border Grid.Column="23" Grid.Row="1">
+						<TextBlock>Номер мероприятия ФЦП</TextBlock>
+					</Border>
+					<Border Grid.Column="24" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
