--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -188,20 +188,50 @@
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
-						<TextBlock>Сведения из паспорта на изделие из обедненного урана</TextBlock>
+					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="2">
-						<TextBlock>Право собственности на ИОУ</TextBlock>
+					<Border Grid.Column="4" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2">
+						<TextBlock>Количество</TextBlock>
+					</Border>
+					<Border Grid.Column="7" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="8" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="9" Grid.Row="0" Grid.ColumnSpan="4">
+						<TextBlock>Суммарная активность, Бк</TextBlock>
+					</Border>
+					<Border Grid.Column="13" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="14" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2">
-						<TextBlock>Код ОКПО</TextBlock>
+					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="2">
+						<TextBlock>ОКПО</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="22" Grid.Row="0" Grid.ColumnSpan="3">
+						<TextBlock>УКТ, упаковка или иная учетная единица</TextBlock>
+					</Border>
+					<Border Grid.Column="25" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="26" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="27" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock>Документ</TextBlock>
 					</Border>
 					<!--Второй уровень заголовков-->
 					<Border Grid.Column="0" Grid.Row="1">
@@ -384,12 +414,28 @@
 						<DataGridTemplateColumn Header="14">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
-									<TextBox Text="{Binding ActivityMeasurementDate.Value, Mode=TwoWay}"/>
+									<CalendarDatePicker SelectedDate="{Binding ActivityMeasurementDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+						
+						<DataGridTemplateColumn Header="15">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+						
+						<DataGridTemplateColumn Header="16">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="15">
+						<DataGridTemplateColumn Header="17">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
@@ -397,7 +443,7 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="16" Width="110">
+						<DataGridTemplateColumn Header="18" Width="110">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
@@ -405,7 +451,7 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="17" Width="100">
+						<DataGridTemplateColumn Header="19" Width="100">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
@@ -413,29 +459,78 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="18" Width="100">
+						<DataGridTemplateColumn Header="20" Width="100">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding StoragePlaceName.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="21">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding StoragePlaceCode.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="22">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding RefineOrSortRAOCode.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+					
+						<DataGridTemplateColumn Header="23">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="19">
+						
+						<DataGridTemplateColumn Header="24">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="20">
+						
+						<DataGridTemplateColumn Header="25">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
 									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
+						
+						<DataGridTemplateColumn Header="26">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding Subsidy.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+						
+						<DataGridTemplateColumn Header="27">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding FcpNumber.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+							 
+						<DataGridTemplateColumn Header="28">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form16">
+									<TextBox Text="{Binding ContractNumber.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+					
 					</DataGrid.Columns>
 				</DataGrid>
 			</Grid>
