--- a/Client_App/Views/Forms/Forms1/Form_18.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_18.axaml
@@ -189,19 +189,28 @@
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
 					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
-						<TextBlock>Сведения из паспорта на изделие из обедненного урана</TextBlock>
+						<TextBlock>Сведения о партии ЖРО</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="2">
-						<TextBlock>Право собственности на ИОУ</TextBlock>
-					</Border>
-					<Border Grid.Column="12" Grid.Row="0" Grid.ColumnSpan="3">
+					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>Документ</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2">
-						<TextBlock>Код ОКПО</TextBlock>
+					<Border Grid.Column="13" Grid.Row="0" Grid.ColumnSpan="2">
+						<TextBlock>ОКПО</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="3">
-						<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
+					<Border Grid.Column="15" Grid.Row="0" Grid.ColumnSpan="2">
+						<TextBlock>Пункт хранения</TextBlock>
+					</Border>
+					<Border Grid.Column="17" Grid.Row="0" Grid.ColumnSpan="9">
+						<TextBlock>Характеристика ЖРО</TextBlock>
+					</Border>
+					<Border Grid.Column="26" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="27" Grid.Row="0" Grid.ColumnSpan="1">
+						<TextBlock></TextBlock>
+					</Border>
+					<Border Grid.Column="28" Grid.Row="1" Grid.ColumnSpan="1">
+						<TextBlock>Договор</TextBlock>
 					</Border>
 					<!--Второй уровень заголовков-->
 					<Border Grid.Column="0" Grid.Row="1">
@@ -214,54 +223,81 @@
 						<TextBlock>дата</TextBlock>
 					</Border>
 					<Border Grid.Column="3" Grid.Row="1">
-						<TextBlock>номер паспорта</TextBlock>
+						<TextBlock>индивидуальный номер (идентификационный код) партии ЖРО</TextBlock>
 					</Border>
 					<Border Grid.Column="4" Grid.Row="1">
-						<TextBlock>наименование</TextBlock>
+						<TextBlock>номер паспорта</TextBlock>
 					</Border>
 					<Border Grid.Column="5" Grid.Row="1">
-						<TextBlock>номер</TextBlock>
+						<TextBlock>объем, куб. м</TextBlock>
 					</Border>
 					<Border Grid.Column="6" Grid.Row="1">
-						<TextBlock>масса обедненного урана, кг</TextBlock>
+						<TextBlock>масса, т</TextBlock>
 					</Border>
 					<Border Grid.Column="7" Grid.Row="1">
-						<TextBlock>код ОКПО изготовителя</TextBlock>
+						<TextBlock>солесодержание, г/л</TextBlock>
 					</Border>
 					<Border Grid.Column="8" Grid.Row="1">
-						<TextBlock>дата выпуска</TextBlock>
+						<TextBlock>наименование радионуклида</TextBlock>
 					</Border>
 					<Border Grid.Column="9" Grid.Row="1">
-						<TextBlock>НСС, мес</TextBlock>
+						<TextBlock>удельная активность, БК/г</TextBlock>
 					</Border>
 					<Border Grid.Column="10" Grid.Row="1">
-						<TextBlock>код формы собственности</TextBlock>
-					</Border>
-					<Border Grid.Column="11" Grid.Row="1">
-						<TextBlock>код ОКПО правообладателя</TextBlock>
-					</Border>
-					<Border Grid.Column="12" Grid.Row="1">
 						<TextBlock>вид</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="1">
+					<Border Grid.Column="11" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
 					</Border>
-					<Border Grid.Column="14" Grid.Row="1">
+					<Border Grid.Column="12" Grid.Row="1">
 						<TextBlock>дата</TextBlock>
 					</Border>
-					<Border Grid.Column="15" Grid.Row="1">
+					<Border Grid.Column="13" Grid.Row="1">
 						<TextBlock>поставщика или получателя</TextBlock>
 					</Border>
-					<Border Grid.Column="16" Grid.Row="1">
+					<Border Grid.Column="14" Grid.Row="1">
 						<TextBlock>перевозчика</TextBlock>
 					</Border>
-					<Border Grid.Column="17" Grid.Row="1">
+					<Border Grid.Column="15" Grid.Row="1">
 						<TextBlock>наименование</TextBlock>
 					</Border>
+					<Border Grid.Column="16" Grid.Row="1">
+						<TextBlock>код</TextBlock>
+					</Border>
+					<Border Grid.Column="17" Grid.Row="1">
+						<TextBlock>код</TextBlock>
+					</Border>
 					<Border Grid.Column="18" Grid.Row="1">
-						<TextBlock>тип</TextBlock>
+						<TextBlock>статус</TextBlock>
 					</Border>
 					<Border Grid.Column="19" Grid.Row="1">
+						<TextBlock>объем, куб. м</TextBlock>
+					</Border>
+					<Border Grid.Column="20" Grid.Row="1">
+						<TextBlock>масса, т</TextBlock>
+					</Border>
+					<Border Grid.Column="21" Grid.Row="1">
+						<TextBlock>тритий</TextBlock>
+					</Border>
+					<Border Grid.Column="22" Grid.Row="1">
+						<TextBlock>бета-, гамма-излучающие радионуклиды (исключая</TextBlock>
+					</Border>
+					<Border Grid.Column="23" Grid.Row="1">
+						<TextBlock>альфа-излучающие радионуклиды (исключая</TextBlock>
+					</Border>
+					<Border Grid.Column="24" Grid.Row="1">
+						<TextBlock>трансурановые радионуклиды</TextBlock>
+					</Border>
+					<Border Grid.Column="25" Grid.Row="1">
+						<TextBlock>код переработки/сортировки РАО</TextBlock>
+					</Border>
+					<Border Grid.Column="26" Grid.Row="1">
+						<TextBlock>Субсидия, %</TextBlock>
+					</Border>
+					<Border Grid.Column="27" Grid.Row="1">
+						<TextBlock>Номер мероприятия ФЦП</TextBlock>
+					</Border>
+					<Border Grid.Column="28" Grid.Row="1">
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
@@ -303,7 +339,7 @@
 						<DataGridTemplateColumn Header="4" Width="80">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding IndividualNumberZHRO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -311,7 +347,7 @@
 						<DataGridTemplateColumn Header="5"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding NameIOU.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding PassportNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -319,7 +355,7 @@
 						<DataGridTemplateColumn Header="6">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding FactoryNumber.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding Volume6.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -327,7 +363,7 @@
 						<DataGridTemplateColumn Header="7"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding Mass.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding Mass7.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -335,7 +371,7 @@
 						<DataGridTemplateColumn Header="8"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding CreatorOKPO.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding SaltConcentration.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -343,7 +379,7 @@
 						<DataGridTemplateColumn Header="9">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<CalendarDatePicker SelectedDate="{Binding CreationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+									<TextBox Text="{Binding Radionuclids.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -352,7 +388,7 @@
 											Header="10">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding SignedServicePeriod.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding SpecificActivity.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -360,7 +396,7 @@
 						<DataGridTemplateColumn Header="11"  Width="100">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding PropertyCode.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -368,7 +404,7 @@
 						<DataGridTemplateColumn Header="12"  Width="110">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding Owner.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -376,7 +412,7 @@
 						<DataGridTemplateColumn Header="13">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding DocumentVid.Value, Mode=TwoWay}"/>
+									<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -384,7 +420,7 @@
 						<DataGridTemplateColumn Header="14">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding DocumentNumber.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
@@ -392,47 +428,118 @@
 						<DataGridTemplateColumn Header="15">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<CalendarDatePicker SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="16" Width="110">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding ProviderOrRecieverOKPO.Value, Mode=TwoWay}"/>
-								</DataTemplate>
-							</DataGridTemplateColumn.CellTemplate>
-						</DataGridTemplateColumn>
-
-						<DataGridTemplateColumn Header="17" Width="100">
-							<DataGridTemplateColumn.CellTemplate>
-								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
 									<TextBox Text="{Binding TransporterOKPO.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="18" Width="100">
+						<DataGridTemplateColumn Header="16">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding PackName.Value, Mode=TwoWay}"/>
+									<CalendarDatePicker SelectedDate="{Binding StoragePlaceName.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+						<DataGridTemplateColumn Header="17">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding StoragePlaceCode.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="19">
+						<DataGridTemplateColumn Header="18">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding PackType.Value, Mode=TwoWay}"/>
+									<CalendarDatePicker SelectedDate="{Binding CodeRAO.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
-						<DataGridTemplateColumn Header="20">
+						<DataGridTemplateColumn Header="19" Width="110">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
-									<TextBox Text="{Binding PackNumber.Value, Mode=TwoWay}"/>
+									<TextBox Text="{Binding StatusRAO.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="20" Width="100">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding Volume20.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="21" Width="100">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding Mass21.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="22">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding TritiumActivity.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="23">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding BetaGammaActivity.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="24">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding AlphaActivity.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="25">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding TransuraniumActivity.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="26">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding RefineOrSortRAOCode.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="27">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding Subsidy.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="28">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding FcpNumber.Value, Mode=TwoWay}"/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn Header="29">
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate x:CompileBindings="True" x:DataType="forms1:Form18">
+									<TextBox Text="{Binding ContractNumber.Value, Mode=TwoWay}"/>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
